<resources>
    <string name="app_name">每日打卡</string>

    <string name="label_activity_plan">当前计划列表</string>
    <string name="label_activity_make_new_plan">新的计划</string>
    <string name="label_activity_add_new_task">新的任务</string>
    <string name="label_activity_login">每日打卡</string>

    <string name="bottom_action_bar_task">今日目标</string>
    <string name="bottom_action_bar_friend">朋友</string>
    <string name="bottom_action_bar_world">发现</string>
    <string name="bottom_action_bar_mine">我的</string>
    <string name="task_title">今日打卡任务</string>
    <string name="punchcard">打卡</string>
    <string name="processbartips">完成进度</string>
    <string name="toast_no_allow">任务还没有完成,不能打卡</string>
    <string name="toast_task_complated">恭喜你,今天任务完成!</string>
    <string name="task_edit_tips">这一刻的想法</string>
    <string name="user_info_nick">昵称:</string>
    <string name="user_info_lv">等级:</string>
    <string name="user_info_progress">完成进度:</string>
    <string name="user_info_sign">签名:</string>

    <string name="day1">星期一</string>
    <string name="day2">星期二</string>
    <string name="day3">星期三</string>
    <string name="day4">星期四</string>
    <string name="day5">星期五</string>
    <string name="day6">星期六</string>
    <string name="day7">星期日</string>
    <string name="day_all">全选</string>
    <string name="btn_text_cancel">取消</string>
    <string name="btn_text_ok">保存</string>

    <string name="type_plan_100days">百日计划</string>
    <string name="type_plan_month">月计划</string>
    <string name="type_plan_week">周计划</string>

    <string name="task_tips">任务</string>
    <string name="remind_tips">提醒日:</string>
    <string name="remind_every_day">每天提醒</string>

    <string name="toast_format_error_days_choice">请最少选择一个提醒日</string>
    <string name="toast_format_error_edit_task">请描述一下你的任务吧</string>
    <string name="toast_format_error_edit_plan">请描述一下你的计划吧</string>

    <string name="share_dialog_album">相册</string>
    <string name="share_dialog_camera">拍照</string>
    <string name="share_dialog_cancel">取消</string>

    <string name="login_activity_acount">账号</string>
    <string name="login_activity_password">密码</string>
    <string name="login_activity_signin">注册</string>
    <string name="login_activity_go_login">去登录</string>
    <string name="login_activity_go_sign">去注册</string>
    <string name="login_activity_login">登录</string>
    <string name="login_activity_sign">注册</string>
    <string name="login_activity_go_signin">去注册</string>
    <string name="login_activity_nickname">昵称</string>

    <string name="login_activity_signin_succeed">注册成功</string>
    <string name="login_activity_signin_failed">注册失败</string>

    <string name="login_activity_login_succeed">登录成功</string>
    <string name="login_activity_login_failed">登录失败</string>

    <string name="edit_plan_activity_add_succeed">添加计划成功</string>

    <string name="network_error">请求出错</string>
    <string name="network_faild">请求失败,请检查是否链接网络</string>
</resources>
