<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dip">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_acount"
            android:textColor="@color/black"
            android:textSize="20dip"/>

        <EditText
            android:id="@+id/edit_acount_login"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/login_activity_password"
            android:textColor="@color/black"
            android:textSize="20dip"/>

        <EditText
            android:id="@+id/edit_password_login"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="20dip"
            android:text="@string/login_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_acount"
            android:textColor="@color/black"
            android:textSize="20dip"/>

        <EditText
            android:id="@+id/edit_sign_acount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/login_activity_password"
            android:textColor="@color/black"
            android:textSize="20dip"/>

        <EditText
            android:id="@+id/edit_sign_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/login_activity_nickname"
            android:textColor="@color/black"
            android:textSize="20dip"/>

        <EditText
            android:id="@+id/edit_sign_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="20dip"
            android:text="@string/login_activity_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn_go"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="25dip"
        android:paddingRight="10dip"
        android:textColor="@color/black"
        android:id="@+id/btn_go"
        android:text="@string/login_activity_go_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <ImageView
            android:src="@mipmap/ic_go_64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>