<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textColor="@color/black"
        android:padding="10dip"
        android:textSize="20dip"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"/>

    <remote.com.example.huangli.punchcard.ctviews.ListViewForScrollView
        android:id="@+id/listview_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    </remote.com.example.huangli.punchcard.ctviews.ListViewForScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"/>

    <RelativeLayout
        android:paddingTop="50dip"
        android:id="@+id/process_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_punchcard"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip">

        <TextView
            android:id="@+id/tv_progress_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processbartips"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="0%"
            android:textColor="@color/black"/>

        <ProgressBar
            android:id="@+id/progress_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progress_tips"
            android:max="100"
            android:progress="0"
            />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dip"
        android:text="@string/task_edit_tips"
        android:layout_marginLeft="10dip"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="10dip"
        android:padding="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_punchcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/black"
            android:text="@string/punchcard"
            android:textColor="@color/white"
            android:textSize="30dip"/>

    </RelativeLayout>
</LinearLayout>
    </RelativeLayout>
</ScrollView>