<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="120dip">
                <ImageView
                    android:id="@+id/portrait"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:src="@mipmap/ic_portrait_128_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/layout_infomation"
                    android:layout_toRightOf="@+id/portrait"
                    android:layout_marginRight="10dip"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="100dip">
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_nick_name"
                        android:textColor="@color/black"
                        android:text="@string/user_info_nick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_nick_lv"
                        android:textColor="@color/black"
                        android:text="@string/user_info_lv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_progress"
                        android:textColor="@color/black"
                        android:text="@string/user_info_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_signature"
                        android:textColor="@color/black"
                        android:text="@string/user_info_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
            <ImageView
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

    <RelativeLayout
        android:id="@+id/layout_plan"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="10dip"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="我的计划"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="设置"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="编辑个人信息"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="退出登录"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/black"/>
    </RelativeLayout>
</LinearLayout>